# norman

./: .gitignore  MANIFEST.in  README.md  norman_dlc_env.yml  package_list.txt  setup.cfg
demo/: code_samples.py  test_79DLC_resnet50_nort_demoSep26shuffle1_50000.h5  test_79DLC_resnet50_nort_demoSep26shuffle1_50000_meta.pickle  test_79_poses_filtered.csv
demo/nort_demo-Jesusanmi-2019-09-26/: config.yaml
demo/nort_demo-Jesusanmi-2019-09-26/labeled-data/Test 1/: CollectedData_Jesusanmi.h5
demo/nort_demo-Jesusanmi-2019-09-26/labeled-data/Test 2/: CollectedData_Jesusanmi.csv  CollectedData_Jesusanmi.h5
demo/nort_demo-Jesusanmi-2019-09-26/labeled-data/mouse1/: CollectedData_Jesusanmi.csv  CollectedData_Jesusanmi.h5
demo/nort_demo-Jesusanmi-2019-09-26/labeled-data/mouse2/: CollectedData_Jesusanmi.h5
nort_demo-Jesusanmi-2019-09-26/evaluation-results/iteration-0/nort_demoSep26-trainset95shuffle1/: DeepCut_resnet50_nort_demoSep26shuffle1_50000-snapshot-50000.h5
nort_demo-Jesusanmi-2019-09-26/labeled-data/Test 1/: CollectedData_Jesusanmi.csv
nort_demo-Jesusanmi-2019-09-26/labeled-data/mouse2/: CollectedData_Jesusanmi.csv
nort_demo-Jesusanmi-2019-09-26/training-datasets/iteration-0/UnaugmentedDataSet_nort_demoSep26/: CollectedData_Jesusanmi.csv  CollectedData_Jesusanmi.h5  CollectedData_Jesusanmiwindows.csv  CollectedData_Jesusanmiwindows.h5  (+1 more)
src/norman.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/norman/norman.egg-info/: PKG-INFO  SOURCES.txt
src/norman_ai/: __init__.py  norman_functions.py
src/norman_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+18 files in other folders)
