[metadata]
# replace with your username:
name = norman_ai
version = 0.0.4
author = seyij_p
author_email = seyi.ooj@gmail.com
description = A package for automation of the novel object recognition test.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Seyij/norman
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src